# pg_mnestic

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  GDPR.md  LICENSE  MIGRATIONS.md  README.md  SECRETS.md  docker-compose.yml  quickstart.sh  rust-toolchain.toml
.github/workflows/: ci.yml
conformance/: README.md  run.sh
conformance/sdk-ts/: conformance.mjs  package-lock.json  package.json
crates/mnestic-core/: Cargo.toml
crates/mnestic-core/src/: chunk.rs  error.rs  lib.rs  ontology.rs  resolve.rs  traits.rs  types.rs
crates/mnestic-engine/: Cargo.toml
crates/mnestic-engine/src/: error.rs  lib.rs
crates/mnestic-engine/tests/: async_ingest.rs  documents.rs  empty_candidate.rs  forget.rs  profile.rs  profile_query.rs  recall.rs  recall_container.rs  recall_rerank.rs  recall_rerank_flag.rs  relations.rs  write_path.rs
crates/mnestic-eval/: Cargo.toml
crates/mnestic-eval/fixtures/: scenarios.json
crates/mnestic-eval/src/: backend.rs  compare.rs  dataset.rs  lib.rs  longmemeval.rs  mock.rs  providers.rs  runner.rs  score.rs
crates/mnestic-eval/tests/: harness.rs
crates/mnestic-model/: Cargo.toml
crates/mnestic-model/src/: anthropic.rs  classify.rs  extract_schema.rs  lib.rs  mock.rs  openai.rs  tei.rs
crates/mnestic-server/: Cargo.toml
crates/mnestic-server/src/: auth.rs  container_tag.rs  directory.rs  documents.rs  error.rs  filter.rs  keys.rs  lib.rs  mcp.rs  memories.rs  memory_tool.rs  query.rs  rate_limit.rs
crates/mnestic-server/tests/: conversations.rs  directory.rs  documents.rs  dreaming.rs  gdpr.rs  keys.rs  mcp.rs  memories.rs  memory_tool.rs  query.rs  rate_limit.rs
crates/mnestic-store/: Cargo.toml
crates/mnestic-store/src/: lib.rs
crates/mnestic-store/tests/: graphwright_extractor.rs  graphwright_index.rs  graphwright_smoke.rs  recency.rs  related.rs  relations.rs  rls_app_role.rs  rls_supersession.rs
docker/pg/: Dockerfile  README.md
docker/server/: Dockerfile
docs/: 01-high-level-plan.md  02-architecture.md  03-low-level-design.md  04-compatibility.md  05-clients.md  06-comparison.md  README.md
load/: README.md  loadtest.js
migrations/: 0001_init.sql  0002_api_key_lifecycle.sql  0003_source_claim.sql  0004_memory_version.sql  0005_source_metadata.sql  0006_memory_relation.sql  0007_graphwright_index.sql  0008_graphwright_watch.sql  0009_graphwright_extractor.sql
services/onnx-extractor/: Dockerfile  README.md  package.json  server.mjs
