# SPDX-License-Identifier: Apache-2.0
[package]
name = "mnestic-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mnestic-core = { workspace = true }
mnestic-store = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
mnestic-model = { workspace = true }
testcontainers = "0.27"
