# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "mnestic-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Real providers for the `memorybench` binary: OpenAI embeddings + Claude
# extraction/answer/judge. The library and its tests run on mocks without this.
real = ["dep:reqwest", "mnestic-model/anthropic", "mnestic-model/openai"]

[dependencies]
mnestic-core = { workspace = true }
mnestic-engine = { workspace = true }
mnestic-store = { workspace = true }
mnestic-model = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
anyhow = "1"
reqwest = { workspace = true, optional = true }

[dev-dependencies]
testcontainers = "0.27"

[[bin]]
name = "memorybench"
required-features = ["real"]

# Head-to-head over the supermemory wire: two HTTP backends + Claude answer/judge.
[[bin]]
name = "compare"
required-features = ["real"]

# Dataset converter: pure, no providers or keys, so no feature gate.
[[bin]]
name = "lme-convert"
path = "src/bin/lme-convert.rs"
