# SPDX-License-Identifier: Apache-2.0
[package]
name = "mnestic-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
openai = ["dep:reqwest", "dep:serde_json"]

[dependencies]
mnestic-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
