# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "mnestic-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
openai = ["dep:reqwest", "dep:serde_json", "dep:tokio", "dep:tracing"]
anthropic = ["dep:reqwest", "dep:serde_json", "dep:tokio", "dep:tracing"]

[dependencies]
mnestic-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Only for the cloud providers' retry backoff (tokio::time::sleep); the default
# offline build pulls no tokio.
tokio = { workspace = true, optional = true }
# Cloud providers emit token-spend metrics; the offline build pulls no tracing.
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
