# SPDX-License-Identifier: Apache-2.0
[package]
name = "mnestic-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# The runnable server binary, wired to the real cloud providers.
serve = ["dep:mnestic-model", "mnestic-model/openai", "mnestic-model/anthropic"]
# The key-issuance CLI. The keys module always compiles; this only gates the binary.
cli = []

[dependencies]
mnestic-core = { workspace = true }
mnestic-engine = { workspace = true }
mnestic-store = { workspace = true }
mnestic-model = { workspace = true, optional = true }
axum = "0.7"
# `net` (on top of the workspace base) is for the binary's TcpListener.
tokio = { workspace = true, features = ["net"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"

[dev-dependencies]
mnestic-model = { workspace = true }
async-trait = { workspace = true }
testcontainers = "0.27"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "serve"
required-features = ["serve"]

[[bin]]
name = "issue-key"
required-features = ["cli"]
