# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "mnestic-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# The runnable server binary, wired to the real cloud providers. Pulls the log subscriber,
# which only the binary initializes.
serve = [
    "dep:mnestic-model",
    "mnestic-model/openai",
    "mnestic-model/anthropic",
    "mnestic-model/rerank",
    "dep:tracing-subscriber",
]
# The key-issuance CLI. The keys module always compiles; this only gates the binary.
cli = []

[dependencies]
mnestic-core = { workspace = true }
mnestic-engine = { workspace = true }
mnestic-store = { workspace = true }
mnestic-model = { workspace = true, optional = true }
axum = "0.7"
# `net` (TcpListener) and `signal` (graceful-shutdown SIGTERM/SIGINT) for the binary.
tokio = { workspace = true, features = ["net", "signal"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
tracing = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

[dev-dependencies]
mnestic-model = { workspace = true }
async-trait = { workspace = true }
testcontainers = "0.27"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "serve"
required-features = ["serve"]

[[bin]]
name = "worker"
required-features = ["serve"]

[[bin]]
name = "issue-key"
required-features = ["cli"]

[[bin]]
name = "list-keys"
required-features = ["cli"]

[[bin]]
name = "revoke-key"
required-features = ["cli"]

[[bin]]
name = "export-actor"
required-features = ["cli"]

[[bin]]
name = "purge-actor"
required-features = ["cli"]
