# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "mnestic-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mnestic-core = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = "0.27"
